# vmware-dvs

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  BRANCH.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  Makefile  README.rst  SETUP.md  neutron.patch  nova.patch  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
agentDVS/: dvs_neutron_agent.py  vCenter_firewall.py  vmware_conf.py
devstack/: local.conf.example  plugin.sh  settings
doc/source/: branch.rst  conf.py  index.rst
mech_vmware_dvs/: agent.py  compute_util.py  config.py  driver.py  dvs_firewall.py  endpoints.py  exceptions.py  filter.py  security_group_utils.py  util.py
mech_vmware_dvs/agentDVS/: agentAPI.py  dvs_neutron_agent.py  noop.py  vCenter_firewall.py
mech_vmware_dvs/tests/: __init__.py  test_agents.py  test_compute_util.py  test_driver.py  test_endpoints.py  test_security_group_utils.py  test_security_groups.py  test_util.py  test_vCenter_firewall.py
networking_vsphere/agent/: dvs_neutron_agent.py
networking_vsphere/common/: constants.py  dvs_agent_rpc_api.py  exceptions.py  vmware_conf.py
networking_vsphere/ml2/: dvs_mechanism_driver.py
networking_vsphere/utils/: compute_util.py  db.py  dvs_util.py  security_group_utils.py
vmware_dvs/: __init__.py
vmware_dvs/agent/: dvs_neutron_agent.py
vmware_dvs/api/: dvs_agent_rpc_api.py
vmware_dvs/common/: config.py  constants.py  exceptions.py
vmware_dvs/driver/: dvs_mechanism_driver.py  mechaniscm_dvs_driver.py
vmware_dvs/utils/: compute_util.py  dvs_util.py  rpc_translator.py  security_group_utils.py
(+24 files in other folders)
