[metadata]
name = mech_vmware_dvs
version = 2015.1
summary = Neutron ml2 mechanism driver allowing inclusion of vCenter
    cluster as part of hybrid cloud.
description-file =
    README.rst
author = Mirantis Inc
author-email = info@mirantis.com
home-page = http://www.mirantis.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    mech_vmware_dvs
data_files =
    etc/neutron =
        etc/ml2_conf_vmware_dvs.ini

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
neutron.ml2.mechanism_drivers =
    vmware_dvs = mech_vmware_dvs.driver.VMwareDVSMechanismDriver

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = locale/mech_vmware_dvs.pot

[compile_catalog]
directory = locale
domain = neutron

[update_catalog]
domain = neutron
output_dir = locale
input_file = locale/mech_vmware_dvs.pot
